Fixed Scrollbar

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -292,16 +292,25 @@ section:target {
 }
 
 .reel::-webkit-scrollbar {
-  height: 1rem;
+  height: 4px;
+  border-radius: 100vw;
 }
 
 .reel::-webkit-scrollbar-track {
-  background-color: #000;
+  background-color: #ffffff00;
+  margin-inline: .35rem;
 }
 
 .reel::-webkit-scrollbar-thumb {
-  background-color: #000;
-  background-image: linear-gradient(#000 0, #000 0.25rem, #fff 0.25rem, #fff 0.75rem, #000 0.75rem);
+  border-radius: 100vw;
+  background: linear-gradient(to right, var(--clr-white), var(--clr-pale), var(--clr-dark), var(--clr-black) 40%);
+}
+
+@supports (scrollbar-color: var(--clr-white) var(--clr-pale)) {
+  .reel {
+    scrollbar-color: var(--clr-black) #ffffff00;
+    scrollbar-width: thin;
+  }
 }
 
 .reel>* {
